add base elements for testing

--- a/advice-generator-app/index.html
+++ b/advice-generator-app/index.html
@@ -17,12 +17,17 @@
   <body>
     <main>
       <h1 class="sr-only">Advice generator</h1>
+      <div>
+        <p id="advice-id"></p>
+        <p id="quotation"></p>
+      </div>
+      <button class="button"></button>
     </main>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">meowed</a>.
-    </div>
+    </footer>
   </body>
 </html>
