change identifiers and function names for better continuity

--- a/advice-generator-app/index.html
+++ b/advice-generator-app/index.html
@@ -19,7 +19,7 @@
       <h1 class="sr-only">Advice generator</h1>
       <div>
         <p id="advice-id"></p>
-        <p id="quotation"></p>
+        <p id="advice-text"></p>
       </div>
       <button class="button"></button>
     </main>
