add basic styling and utility classes

--- a/advice-generator-app/index.html
+++ b/advice-generator-app/index.html
@@ -14,14 +14,16 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body>
-    <main>
+  <body class="flow bg-dark">
+    <main class="main container bg-medium text-cyan text-center">
       <h1 class="sr-only">Advice generator</h1>
       <div>
-        <p id="advice-id"></p>
-        <p id="advice-text"></p>
+        <p id="advice-id" class="text-accent"></p>
+        <p id="advice-text" class="text-light fs-700"></p>
       </div>
-      <button class="button"></button>
+      <button class="button bg-accent">
+        <img src="./images/icon-dice.svg" alt="" />
+      </button>
     </main>
     <footer class="attribution">
       Challenge by
